# SPDX-FileCopyrightText: 2024 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "cxxqtservo"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.6"
cxx-qt-lib = { version = "0.6", features = ["url"] }

euclid = "0.22"
gleam = "0.15"
glow = "0.12.2"
raw-window-handle = "0.5"
url = "2.3"

# Note that we cannot run cargo update on the lock file
# instead copy the lock file from the servo repository
# then cargo run will add the missing dependencies to the lock file
libservo = { git = "https://github.com/servo/servo.git", rev = "3a3e76a935f92ce84c24496cfc46207cd46088f6" }
servo-media = { git = "https://github.com/servo/media" }
surfman = { version = "0.9", features = ["chains", "sm-angle", "sm-angle-default"] }

[build-dependencies]
cxx-qt-build = { version = "0.6", features = [ "link_qt_object_files" ] }
cxx-qt-lib-headers = { version = "0.6" }

[patch.crates-io]
# Use a need to follow `main` of CXX-Qt version
cxx-qt = { git = "https://github.com/kdab/cxx-qt.git", branch = "main" }
cxx-qt-build = { git = "https://github.com/kdab/cxx-qt.git", branch = "main" }
cxx-qt-gen = { git = "https://github.com/kdab/cxx-qt.git", branch = "main" }
cxx-qt-macro = { git = "https://github.com/kdab/cxx-qt.git", branch = "main" }
cxx-qt-lib = { git = "https://github.com/kdab/cxx-qt.git", branch = "main" }
cxx-qt-lib-headers = { git = "https://github.com/kdab/cxx-qt.git", branch = "main" }
qt-build-utils = { git = "https://github.com/kdab/cxx-qt.git", branch = "main" }

# We need a patched surfman to avoid OpenGL errors and force OpenGLES for the RPi
surfman = { git = "https://github.com/ahayzen-kdab/surfman.git", branch = "patched-opengl-assert-and-gles-0-9-1" }
